# ot-harjoitustyo

./: README.md
battleships/: pyproject.toml  tasks.py
battleships/dokumentaatio/: changelog.md  tyoaikakirjanpito.md
battleships/src/: constants.py  engine.py  index.py  renderer.py
battleships/src/sprites/ui/: __init__.py  button.py  grid.py  label.py  ship.py
battleships/src/states/: __init__.py  base.py  menu.py  start.py
battleships/src/tests/: engine_test.py
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
